--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ cycler==0.10.0
 Cython==0.28.4
 cytoolz==0.9.0.1
 dask==1.2.2
+dataclasses==0.6
 datashape==0.5.4
 decorator==4.3.0
 defusedxml==0.6.0
